--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "https": "^1.0.0",
+    "path": "^0.12.7",
     "text-to-speech": "^1.0.10"
   }
 }
